# mindee-api-python

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  SKILL.md  carte_grise.json  cli.py  client.html  client_mixin.html  client_options.html  documents.html  error.html  field_types.html  genindex.html  geometry.html  image.html  index.html  input.html  logger.html  mindee-cli.py  mindee-cli.sh  mindee_http.html  objects.inv  pdf.html  py-modindex.html  pyproject.toml  requirements.dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: _docs.yml  _publish-code.yml  _publish-docs.yml  _publish-guide.yml  _publish.yml  _smoke-test.yml  _static-analysis.yml  _sync-readme.yml  _test-cli.yml  _test-code-samples.yml  _test-integrations.yml  _test-regressions.yml  _test-units.yml  _workflow_lint.yml  cron.yml  docs.yml  license.yml  linting.yml  publish-release.yml  publish.yml  pull-request.yml  push-main-branch.yml  sync-readme.yml  tag-version.yml  test-code-samples.yml  test-integration.yml  test-regression.yml  test.yml  unit-test.yml
_sources/: field_types.rst.txt  geometry.rst.txt  index.rst.txt  logger.rst.txt
_sources/parsing/: common.rst.txt  index.rst.txt
_sources/product/: barcode_reader_v1.rst.txt  cropper_v1.rst.txt  custom_v1.rst.txt  driver_license_v1.rst.txt  financial_document_v1.rst.txt  generated_v1.rst.txt  proof_of_address_v1.rst.txt
_sources/products/: field_types.rst.txt
_sources/utilities/: index.rst.txt
_sources/v1/: client_options.rst.txt
_sources/v2/: index.rst.txt  mindee_http.rst.txt
_static/: basic.css
code_samples/: bank_account_details_v2.txt  bank_check_v1.txt  barcode_reader_v1.txt  bill_of_lading_v1_async.txt  business_card_v1_async.txt  carte_grise_v1.txt  carte_vitale_v1.txt  cropper_v1.txt  custom_v1.txt  default.txt  default_async.txt  default_v2.txt  delivery_notes_v1_async.txt  driver_license_v1_async.txt  expense_receipts_v5.txt  expense_receipts_v5_async.txt  financial_document_v1.txt  financial_document_v1_async.txt  french_healthcard_v1_async.txt  idcard_fr_v1.txt  idcard_fr_v2.txt  ind_passport_v1_async.txt  international_id_v2_async.txt  invoice_splitter_v1_async.txt  invoice_v4.txt  invoices_v4.txt  invoices_v4_async.txt  license_plates_v1.txt  material_certificate_v1.txt  material_certificate_v1_async.txt  multi_receipts_detector_v1.txt  passport_v1.txt  payslip_fra_v2_async.txt  payslip_fra_v3_async.txt  petrol_receipts_v1.txt  proof_of_address_v1.txt  receipt_v3.txt  us_mail_v3_async.txt  us_w9_v1.txt  v2_crop.txt  (+4 more)
code_samples/fr/: carte_vitale_v1.txt
code_samples/us/: bank_check_v1.txt
docs/: client.rst  client_mixin.rst  client_options.rst  conf.py  documents.rst  error.rst  field_types.rst  geometry.rst  image.rst  index.rst  input.rst  mindee_http.rst  pdf.rst
docs/code_samples/: shipping_container_v1.py
docs/guide/: cli.md  python-api-builder.md  python-cli.md  python-getting-started.md  python-invoice-ocr.md  python-passport-ocr.md  python-receipt-ocr.md
docs/mindee/: index.rst
docs/misc/: index.rst  input.rst  mindee_http.rst
docs/parsing/: common.rst  custom.rst  generated.rst  index.rst  standard.rst
docs/predictions/: base.rst  index.rst
docs/product/: bill_of_lading_v1.rst  business_card_v1.rst  delivery_note_v1.rst  driver_license_v1.rst  financial_document_v1.rst  generated_v1.rst  index.rst  international_id_v1.rst  international_id_v2.rst  invoice_splitter_v1.rst  invoice_v4.rst  (+7 more)
examples/: auto_invoice_splitter_extraction.py  auto_invoice_splitter_extraction_example.py  auto_multi_receipts_extraction_example.py  custom_line_items_reconstruction.py  display_cropping.py  multi_receipts_tutorial.py
guide/: bank_account_details_v2.md  bank_check_v1.md  barcode_reader_v1.md  carte_grise_v1.md  carte_vitale_v1.md  cropper_v1.md  custom_v1.md  driver_license_v1.md  expense_receipts_v5.md  financial_document_v1.md  generated_v1.md  getting_started.md  idcard_fr_v2.md  international_id_v2.md  invoice_splitter_v1.md  invoices_v4.md  license_plates_v1.md  material_certificate_v1.md  multi_receipts_detector_v1.md  payslip_fra_v2.md  petrol_receipts_v1.md  proof_of_address_v1.md  resume_v1.md  us_driver_license_v1.md  us_healthcare_cards_v1.md  us_mail_v3.md  us_w9_v1.md
mindee/: __init__.py  __main__.py  benchmark.py  cli.py  client.py  client_mixin.py  client_v2.py  document_config.py  endpoints.py  geometry.py  http.py  inputs.py  logger.py  plots.py  response.py  versions.py
misc/: error.html  geometry.html  index.html  input.html  mindee_http.html
parsing/: common.html  custom.html  generated.html  index.html  standard.html
predictions/: base.html  index.html
product/: barcode_reader_v1.html  bill_of_lading_v1.html  business_card_v1.html  cropper_v1.html  custom_v1.html  delivery_note_v1.html  driver_license_v1.html  financial_document_v1.html  generated_v1.html  index.html  international_id_v1.html  international_id_v2.html  invoice_splitter_v1.html  invoice_v4.html  material_certificate_v1.html  multi_receipts_detector_v1.html  nutrition_facts_label_v1.html  passport_v1.html  proof_of_address_v1.html  receipt_v4.html  receipt_v5.html  resume_v1.html
products/: custom.html  field_types.html  index.html  international.html  us.html
scripts/: generate_lite_toml.py
tests/: __init__.py  conftest.py  fixtures.py  test_async_response_post.py  test_cli.py  test_client.py  test_client_v2.py  test_client_v2_integration.py  test_code_samples.sh  test_geometry.py  test_inputs.py  test_pkg_versions.py  test_plots.py  test_response.py  test_v1_cli.sh  test_v1_code_samples.sh  test_v2_cli.sh  test_v2_code_samples.sh  utils.py
utilities/: geometry.html  index.html
v1/: client.html  client_options.html  error.html  index.html  mindee_http.html  pdf.html
v2/: client_options.html  error.html  file_operations.html  index.html  mindee_http.html
(+1383 files in other folders)
