[build-system]
requires = ["setuptools >= 68.0.0", "wheel >= 0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindee"
authors = [
  {name = "Mindee", email = "opensource@mindee.com"},
]
dynamic = ["version"]
description = "Mindee API helper library for Python"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
]

requires-python = ">=3.8"

dependencies = [
  "pypdfium2>=4.0,<4.30.1",
  "Pillow>=9.5.0",
  "pytz>=2023.3",
  "requests>=2.31.0",
]

[project.urls]
Homepage = "https://www.mindee.com"
Documentation = "https://developers.mindee.com/docs/python-sdk"
Repository = "https://github.com/publicMindee/mindee-api-python"
Issues = "https://github.com/mindee/mindee-api-python/issues"
Changelog = "https://github.com/mindee/mindee-api-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
lint = [
  "pylint==3.3.1",
  "pre-commit~=3.2.2",
  "types-pytz>=2023.3",
  "types-requests>=2.31",
]
test = [
  "toml~=0.10.2",
  "pytest~=7.4",
  "pytest-cov~=4.1",
]
docs = [
  "sphinx~=5.3",
  "sphinx_rtd_theme~=1.1",
  "sphinx-autodoc-typehints~=1.20",
]
build = [
  "build",
  "twine",
]

[project.scripts]
mindee = "mindee.cli:main"


[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "mindee.versions.__version__"}

[tool.setuptools.package-data]
"mindee" = ["py.typed"]


[tool.black]
line-length = 88
target-version = [
  'py38',
  'py39',
  'py310',
  'py311',
  'py312',
]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.mypy]
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pypdfium2.*"
ignore_missing_imports = true


[tool.pylic]
safe_licenses = [
  "Apache Software License",
  "MIT License",
  "Mozilla Public License 2.0 (MPL 2.0)",
  "BSD License",
  "BSD-3-Clause, Apache-2.0, PdfiumThirdParty",
  "Historical Permission Notice and Disclaimer (HPND)",
  "CMU License (MIT-CMU)",
]


[tool.pytest.ini_options]
addopts = "--pyargs --cov mindee --cov-report term:skip-covered --cov-report term-missing -m 'not regression and not integration'"
python_files = "test*.py"
junit_family = "xunit2"
markers = [
  "regression: marks tests as regression tests - select with '-m regression'",
  "lineitems: debug line items",
  "integration: integration tests that send calls to the API - select with '-m integration'",
  "v2: Tests specific to version 2 of the API"
]
testpaths = [
  "tests",
]
