[build-system]
requires = ["setuptools >= 77.0.3", "wheel >= 0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindee"
authors = [
    { name = "Mindee", email = "opensource@mindee.com" },
]
dynamic = ["version"]
description = "Mindee API helper library for Python"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

requires-python = ">=3.10"

dependencies = [
    "pypdfium2>=4.0,<6.0",
    "Pillow>=12.2.0",
    "httpx[http2]>=0.28.1,<1.0",
]

[project.urls]
Homepage = "https://www.mindee.com"
Documentation = "https://developers.mindee.com/docs/python-sdk"
Repository = "https://github.com/publicMindee/mindee-api-python"
Issues = "https://github.com/mindee/mindee-api-python/issues"
Changelog = "https://github.com/mindee/mindee-api-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
lint = [
    "pylint==4.0.6",
    "pre-commit~=4.6.0",
    "pip-audit>=2.10.0",
]
test = [
    "toml~=0.10.2",
    "pytest~=9.0.3,<9.2.0",
    "pytest-cov~=7.1.0",
    "respx~=0.23.1"
]
docs = [
    "sphinx~=9.1.0",
    "sphinx_rtd_theme~=3.1.0",
    "sphinx-autodoc-typehints>=3.10.4,<4.0.0",
]
build = [
    "build",
    "twine",
    "toml"
]

[project.scripts]
mindee = "mindee.cli:main"


[tool.setuptools.packages]
find = { }

[tool.setuptools.dynamic]
version = { attr = "mindee.versions.__version__" }

[tool.setuptools.package-data]
"mindee" = ["py.typed"]


[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF", "PT"]
ignore = ["E501"]

[tool.mypy]
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pypdfium2.*"
ignore_missing_imports = true


[tool.pylic]
safe_licenses = [
    "Apache Software License",
    "MIT License",
    "Mozilla Public License 2.0 (MPL 2.0)",
    "BSD License",
    "BSD-3-Clause, Apache-2.0, PdfiumThirdParty",
    "Historical Permission Notice and Disclaimer (HPND)",
    "CMU License (MIT-CMU)",
]


[tool.pytest.ini_options]
addopts = "--pyargs --cov-report term:skip-covered --cov-report term-missing -m 'not integration and not regression and not lite'"
python_files = "test*.py"
junit_family = "xunit2"
markers = [
    "lineitems: debug line items",
    "integration: integration tests that send calls to the API - select with '-m integration'",
    "lite: tests for mindee-lite",
    "v2: tests specific to version 2 of the API",
    "pillow: tests that require the use of the Pillow (PIL) library",
    "pypdfium2: tests that require the usage of the pypdfium2 library",
    "regression: marks tests as regression tests - select with '-m regression'",
]
testpaths = [
    "tests",
]
