[metadata]
name = mindee
author = Mindee
author_email = devrel@mindee.com
description = Mindee API helper library for Python
long_description = file:README.md
long_description_content_type = text/markdown
classifiers=
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
url = https://mindee.com/
project_urls =
    Documentation = https://developers.mindee.com/docs/python-sdk
    Source = https://github.com/publicMindee/mindee-api-python
license = MIT
license_files = LICENSE
platform = any

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    pikepdf~=6.2
    pytz>=2022.7
    requests~=2.28

[options.entry_points]
console_scripts =
    mindee-cli = mindee.cli:main

[options.package_data]
mindee =
    version
    py.typed

[options.extras_require]
dev =
    black==22.10.0
    mypy==0.982
    pip-tools~=6.9.0
    pylint==2.15.4
    setuptools==51.3.3
    isort==5.10.1
    pre-commit~=2.20.0
    pydocstyle==6.1.1
test =
    pytest~=7.1
    pytest-cov~=4.0
docs =
    sphinx~=5.3
    sphinx_rtd_theme~=1.1
    sphinx-autodoc-typehints~=1.20
build =
    build~=0.8
    twine~=4.0

[options.packages.find]
exclude = tests

[tool:pytest]
addopts = --pyargs --cov-fail-under 85 --cov-config=.coveragerc --cov mindee --cov-report term:skip-covered --cov-report term-missing
python_files = test*.py
junit_family = xunit2
