[metadata]
name = mindee
author = Mindee
author_email = opensource@mindee.com
description = Mindee API helper library for Python
long_description = file:README.md
long_description_content_type = text/markdown
classifiers=
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
url = https://mindee.com/
project_urls =
    Documentation = https://developers.mindee.com/docs/python-sdk
    Source = https://github.com/publicMindee/mindee-api-python
license = MIT
license_files = LICENSE
platform = any

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    pikepdf~=6.2
    pytz>=2023.3
    requests~=2.31

[options.entry_points]
console_scripts =
    mindee-cli = mindee.cli:main

[options.package_data]
mindee =
    version
    py.typed

[options.extras_require]
dev =
    black==23.1.0
    mypy==1.4.1
    pip-tools~=6.14
    pylint==2.17.1
    setuptools==51.3.3
    isort==5.11.5
    pre-commit~=2.21.0
    pydocstyle==6.3.0
test =
    pytest~=7.1
    pytest-cov~=4.0
docs =
    sphinx~=5.3
    sphinx_rtd_theme~=1.1
    sphinx-autodoc-typehints~=1.20
build =
    build~=0.9
    twine~=4.0

[options.packages.find]
exclude = tests

[tool:pytest]
addopts = --pyargs --cov-fail-under 85 --cov-config=.coveragerc --cov mindee --cov-report term:skip-covered --cov-report term-missing
python_files = test*.py
junit_family = xunit2
