[metadata]
name = mindee
author = Mindee
author_email = opensource@mindee.com
description = Mindee API helper library for Python
long_description = file:README.md
long_description_content_type = text/markdown
classifiers=
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
url = https://mindee.com/
project_urls =
    Documentation = https://developers.mindee.com/docs/python-sdk
    Source = https://github.com/publicMindee/mindee-api-python
license = MIT
license_files = LICENSE
platform = any

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    pypdfium2~=4.7
    pytz>=2023.3
    requests~=2.31

[options.entry_points]
console_scripts =
    mindee-cli = mindee.cli:main

[options.package_data]
mindee =
    version
    py.typed

[options.extras_require]
dev =
    pylint==2.17.7
    setuptools==51.3.3
    pre-commit~=2.21.0
    types-pytz~=2023.3
    types-requests~=2.31
    pytest~=7.4
    pytest-cov~=4.1
docs =
    sphinx~=5.3
    sphinx_rtd_theme~=1.1
    sphinx-autodoc-typehints~=1.20
build =
    build~=0.9
    twine~=4.0

[options.packages.find]
exclude = tests
